--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 /exoskeleton/pyonics/submodules/ui/vosk-model-pt-fb-v0.1.1-pruned/
 /exoskeleton/pyonics/submodules/ui/vosk-model-small-en-us-0.15/
 /exoskeleton/pyonics/submodules/ui/vosk-model-small-en-us-0.15-OLD/
+/portfolio
+/Klampt-examples
+/exoskeleton/robots
+/exoskeleton/demo
+/exoskeleton/test_config1.txt
+/exoskeleton/test_config2.txt
